--- a/compte/index.html
+++ b/compte/index.html
@@ -6,7 +6,7 @@
     <title>Atherion OS Portal</title>
     <link rel="manifest" href="manifest.json">
     <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script> <!-- Socket.IO -->
-    <script src="https://cdn.jsdelivr.net/npm/onnxruntime-web@1.18.0/dist/ort.all.js"></script> <!-- WebNN via ORT -->
+    <script src="https://cdn.jsdelivr.net/npm/onnxruntime-web@1.22.0/dist/ort.all.js"></script> <!-- WebNN via ORT -->
     <script src="https://unpkg.com/jimp@0.22.12/browser/lib/jimp.min.js"></script> <!-- Jimp pour images -->
     <script src="https://alcdn.msauth.net/browser/2.20.0/js/msal-browser.min.js"></script> <!-- MSAL pour AAD -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script> <!-- Three.js pour particles 3D -->
@@ -35,7 +35,7 @@
                 <button type="submit">Connexion</button>
                 <button type="button" onclick="loginAAD()">Connexion AAD (Edge)</button>
             </form>
-            <p>Admin: yasscode / YASSINEa1!</p>
+            <p>Bienvenue sur Aherion site connecter vous</p>
         </div>
         <div id="dashboard" style="display:none;">
             <h1 class="glow">Bienvenue dans Atherion</h1>
@@ -192,4 +192,5 @@
         }
     </script>
 </body>
+
 </html>
