ajouter un option de connexion

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
       <a href="#gallery">Galerie</a>
       <a href="#terminal">Terminal</a>
       <a href="#download" class="btn btn-primary">Télécharger</a>
+      <a href="/compte" class="btn btn-primary">Se connecter</a>
     </nav>
   </header>
 
@@ -222,8 +223,8 @@ make run
         <figcaption>Agent IA</figcaption>
       </figure>
       <figure class="gal">
-        <img src="assets/hero.svg" alt="Font d'écrant spéciale v0.1" />
-        <figcaption>Font d'écrant spéciale v0.1</figcaption>
+        <img src="assets/hero.svg" alt="Fond d'écran spéciale v0.1" />
+        <figcaption>Fond d'écran spéciale v0.1</figcaption>
       </figure>
     </div>
   </section>
