posibilité acceder a la connexion index.html

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <a href="#gallery">Galerie</a>
       <a href="#terminal">Terminal</a>
       <a href="#download" class="btn btn-primary">Télécharger</a>
-      <a href="/compte" class="btn btn-primary">Se connecter</a>
+      <a href="/www/compte" class="btn btn-primary">Se connecter</a>
     </nav>
   </header>
 
@@ -286,3 +286,4 @@ make run
   <script src="app.js"></script>
 </body>
 </html>
+
