--- a/compte/index.html
+++ b/compte/index.html
@@ -161,7 +161,7 @@
 
         // Connexion Socket.IO
         function initSocket() {
-            socket = io('http://localhost:3000'); // Remplacez par votre URL serveur
+            socket = io('https://yasscode1234.github.io/www/compte/'); // Remplacez par votre URL serveur
 
             socket.on('connect', () => {
                 console.log('Connecté au serveur');
@@ -561,3 +561,4 @@
     </script>
 </body>
 </html>
+
